# SortVisualiser

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflow/: StaticAnalysis.yml
.github/workflows/: Coverage.yml  StaticAnalysis.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
scripts/: clang-format.sh
src/: CMakeLists.txt  main.cpp
src/algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  random.cpp  random.hpp
src/audio/: CMakeLists.txt  audio.cpp  audio.hpp
src/event/: CMakeLists.txt  event.cpp  event.hpp
src/gfx/: CMakeLists.txt  graphics.cpp  graphics.hpp  sort_view.cpp  sort_view.hpp  window.cpp  window.hpp
src/log/: CMakeLists.txt  log.cpp  log.hpp
tests/: CMakeLists.txt  algorithm.cpp  array.cpp  event.cpp
